packages/isar_community_generator/test/errors/id/missing.dart
// no id property defined

import 'package:isar_community/isar_community.dart';

@collection
class Test {
  late int id;

  late String name;
}
